--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-nltk
-transformers
-torch
-pandas
-streamlit
-plotly
-wordcloud
-tqdm
-matplotlib 
+transformers==4.30.2
+torch==2.0.1
+pandas==2.0.3
+streamlit==1.24.0
+plotly==5.15.0
+wordcloud==1.9.2
+tqdm==4.65.0
+matplotlib==3.7.1
+nltk==3.8.1 
