--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,16 @@
+# Core packages
 transformers==4.30.2
 torch>=2.2.0
 pandas==2.0.3
 streamlit==1.24.0
+
+# Visualization
 plotly==5.15.0
-wordcloud==1.9.2
-tqdm==4.65.0
 matplotlib==3.7.1
+
+# Remove problematic wordcloud package
+# wordcloud==1.9.2
+
+# Utils
+tqdm==4.65.0
 nltk==3.8.1 
