--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,21 @@
-# Core packages
-transformers==4.30.2
+# Core ML
+transformers>=4.30.2
 torch>=2.2.0
-pandas==2.0.3
-streamlit==1.24.0
+
+# Data processing
+pandas>=2.1.0
+numpy>=1.24.0
 
 # Visualization
-plotly==5.15.0
-matplotlib==3.7.1
+plotly>=5.15.0
+matplotlib>=3.7.1
+
+# Web app
+streamlit>=1.24.0
+
+# Utilities
+tqdm>=4.65.0
+nltk>=3.8.1
 
 # Remove problematic wordcloud package
-# wordcloud==1.9.2
-
-# Utils
-tqdm==4.65.0
-nltk==3.8.1 
+# wordcloud==1.9.2 
