--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,27 @@
-# Core ML
-transformers>=4.30.2
-torch>=2.2.0
+# Core packages with stable versions
+streamlit==1.28.0
+plotly==5.18.0
+pandas==2.1.4
+numpy==1.26.0
+
+# Remove packages that need building
+# transformers
+# torch
+# matplotlib
+# tokenizers
 
 # Data processing
-pandas>=2.1.0
-numpy>=1.24.0
+# numpy>=1.24.0
 
 # Visualization
-plotly>=5.15.0
-matplotlib>=3.7.1
+# matplotlib>=3.7.1
 
 # Web app
-streamlit>=1.24.0
+# streamlit>=1.24.0
 
 # Utilities
-tqdm>=4.65.0
-nltk>=3.8.1
+# tqdm>=4.65.0
+# nltk>=3.8.1
 
 # Remove problematic wordcloud package
 # wordcloud==1.9.2 
